kustomize/gitops/resources/webhook/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: system-gitops
spec:
  parentRefs:
    - name: internal
      namespace: system-gateway
      sectionName: web-http
    - name: internal
      namespace: system-gateway
      sectionName: flux-webhook
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
